--- a/Django/newyear/templates/newyear/index.html
+++ b/Django/newyear/templates/newyear/index.html
@@ -1,8 +1,12 @@
+{% load static %}
+
+
 <!DOCTYPE html>
 
 <html lang="en">
 <head>
     <title>Is it new years?</title>
+    <link href="{% static 'newyear/styles.css' %}" rel="stylesheet">
 </head>
 
 <body>
